i deletd the booptrap and added  plkane HTML

--- a/JS_Dark_mode/index.html
+++ b/JS_Dark_mode/index.html
@@ -1,34 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/JS_Dark_mode/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/JS_Dark_mode/node_modules/@popperjs/core/dist/cjs/popper.js">
-    <link rel="stylesheet" href="/JS_Dark_mode/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="Style.css">
-    <title>Javascript Dark mode </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/JS_Dark_mode/node_modules/@popperjs/core/dist/cjs/popper.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="/JS_Dark_mode/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="Style.css">
+  <title>Javascript Dark mode </title>
 </head>
+
 <body>
 
-    <!--Header container -->
-    <div class="container">
-        <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
+  <!-- the icons theme -->
+  <div id="theme-toggle" class=" fas fa-moon">
+
+  </div>
+
+  <!-- header -->
+  <div class=" Header">
+    <h1> Javascript Dark mode </h1>
+  </div>
+
+  <!-- firt contnet  -->
+  <div class="container">
+    <!-- frist class -->
+    <div class="content">
+      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora possimus quibusdam dolores quod velit
+        corrupti inventore corporis, perferendis minus doloremque recusandae, enim eum ab fuga alias iure veritatis
+        optio cumque.</p>
+
+      <!--  the infor  -->
+      <div class="userInfor">
+        <h3> Opoku Isaiah </h3>
+        <span>SOftware developer</span>
+        <span> |</span>
+        <span>Coach</span>
+
+        <!-- Image -->
+           <span>   <img src="/JS_Dark_mode/Images/WhatsApp_Image_2022-06-15_at_2.36.35_AM-removebg-preview.png" alt=" th user image " width="50" height="50" class="first_image">
+             </span>
+        <br>
+        <!-- icons  -->
+        <span>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+
+          <!-- diffferent icons stars  -->
+          <span class="icon-star"></span>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </span>
+        </span>
+      </div>
+    </div>
+
+
+    <!-- the second class  -->
+    <div class="content">
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil autem ut optio eius quasi commodi repudiandae
+        fugiat. Facilis voluptates non reiciendis. Dolorem quasi et nulla aliquid eveniet eius, laboriosam corporis!</p>
+
+      <!--  the infor  -->
+      <div class="userInfor">
+        <h3> Hanford Adu  </h3>
+        <span>SOftware developer</span>
+        <span> |</span>
+        <span>speaker</span>
+
+
+              <span>   <img src="/JS_Dark_mode/Images/0fgjhs6tgb5d5qtpd-removebg-preview.png" alt=" th user image " width="50" height="50" class="second_image">
+             </span>
+        <br>
+
+
+        <!-- icons  -->
+        <span>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+
+          <!-- diffferent icons stars  -->
+          <span class="icon-star"></span>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </span>
+        </span>
+      </div>
 
     </div>
-  
-    
 
+
+    <!-- the third class  -->
+    <div class="content">
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus corrupti aliquam nam ut voluptatibus optio
+        nemo provident enim, hic tempore magnam perferendis tempora. Porro, accusamus odit explicabo nulla in quasi.</p>
+
+      <!--  the infor  -->
+      <div class="userInfor">
+        <h3> Opoku kwame  </h3>
+        <span>SOftware developer</span>
+        <span> |</span>
+        <span>Coach</span>
+         <span>   <img src="/JS_Dark_mode/Images/istockphoto-184376069-612x612.jpg" alt=" th user image " width="50" height="50" class="third_image">
+             </span>
+        <br>
+
+
+        <!-- icons  -->
+        <span>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+
+          <!-- diffferent icons stars  -->
+          <span class="icon-star"></span>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </span>
+        </span>
+      </div>
+    </div>
+
+
+    <!-- the foruth class  -->
+
+  </div>
 
   <script src="App.js"></script>
 </body>
+
 </html>
